--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,11 @@ steps:
   image: plugins/docker
   settings:
     dockerfile: Dockerfile
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    repo: josemarbm23/ephemeral-environments 
     tags:
     - latest
     - main
